third_party/blink/web_tests/http/tests/devtools/security/mixed-content-sidebar-expected.txt
error: http://127.0.0.1:8000/devtools/resources/inspected-page.html
error: http://127.0.0.1:8000/devtools/resources/inspected-page.html
Tests that the sidebar uses the correct styling for mixed content subresources.

Origin sidebar:
<DIV >
    <#document-fragment >
        <STYLE >
        </STYLE>
        <STYLE >
        </STYLE>
        <STYLE >
        </STYLE>
        <STYLE >
        </STYLE>
        <STYLE >
        </STYLE>
        <STYLE >
        </STYLE>
        <STYLE >
        </STYLE>
        <STYLE >
        </STYLE>
        <DIV class=tree-outline-disclosure >
            <OL class=tree-outline role=tree tabindex=-1 jslog=Tree >
                <LI jslog=TreeItem; parent: parentTreeItem; track: click, keydown: ArrowUp|ArrowDown|ArrowLeft|ArrowRight|Backspace|Delete|Enter|Space|Home|End role=treeitem class=security-main-view-sidebar-tree-item selected force-white-icons title=Overview tabindex=0 aria-selected=true >
                    <DIV class=selection fill >
                    </DIV>
                    <DIV class=leading-icons icons-container >
                        <DEVTOOLS-ICON role=presentation name=indeterminate-question-box class=lock-icon lock-icon-neutral >
                            <#document-fragment >
                                <SPAN style=--icon-url: var(--image-file-indeterminate-question-box); >
                                </SPAN>
                                <STYLE >
                                </STYLE>
                            </#document-fragment>
                        </DEVTOOLS-ICON>
                    </DIV>
                    <SPAN class=tree-element-title >
                    </SPAN>
                    <SPAN class=title >
Overview
                    </SPAN>
                </LI>
                <OL class=children role=group >
                </OL>
                <LI title=Main origin jslog=TreeItem; parent: parentTreeItem; track: click, keydown: ArrowUp|ArrowDown|ArrowLeft|ArrowRight|Backspace|Delete|Enter|Space|Home|End role=treeitem class=parent always-parent expanded security-sidebar-origins aria-expanded=true >
                    <DIV class=selection fill >
                    </DIV>
                    <SPAN class=tree-element-title >
Main origin
                    </SPAN>
                </LI>
                <OL class=children expanded role=group aria-label=Main origin >
                    <LI title=Reload to view details jslog=TreeItem; parent: parentTreeItem; track: click, keydown: ArrowUp|ArrowDown|ArrowLeft|ArrowRight|Backspace|Delete|Enter|Space|Home|End role=treeitem class=security-main-view-reload-message hidden >
                        <DIV class=selection fill >
                        </DIV>
                        <SPAN class=tree-element-title >
Reload to view details
                        </SPAN>
                    </LI>
                    <OL class=children hidden role=group >
                    </OL>
                </OL>
                <LI title=Non-secure origins jslog=TreeItem; parent: parentTreeItem; track: click, keydown: ArrowUp|ArrowDown|ArrowLeft|ArrowRight|Backspace|Delete|Enter|Space|Home|End role=treeitem class=parent always-parent expanded security-sidebar-origins aria-expanded=true >
                    <DIV class=selection fill >
                    </DIV>
                    <SPAN class=tree-element-title >
Non-secure origins
                    </SPAN>
                </LI>
                <OL class=children expanded role=group aria-label=Non-secure origins >
                    <LI jslog=TreeItem; parent: parentTreeItem; track: click, keydown: ArrowUp|ArrowDown|ArrowLeft|ArrowRight|Backspace|Delete|Enter|Space|Home|End role=treeitem class=security-sidebar-tree-item title=http://foo.test >
                        <DIV class=selection fill >
                        </DIV>
                        <DIV class=leading-icons icons-container >
                            <DEVTOOLS-ICON role=presentation name=warning class=security-property security-property-insecure >
                                <#document-fragment >
                                    <SPAN style=--icon-url: var(--image-file-warning); >
                                    </SPAN>
                                    <STYLE >
                                    </STYLE>
                                </#document-fragment>
                            </DEVTOOLS-ICON>
                        </DIV>
                        <SPAN class=tree-element-title >
                        </SPAN>
                        <SPAN class=highlighted-url >
                            <SPAN class=url-scheme-insecure >
http
                            </SPAN>
                            <SPAN class=url-scheme-separator >
://
                            </SPAN>
                            <SPAN >
foo.test
                            </SPAN>
                        </SPAN>
                    </LI>
                    <OL class=children role=group >
                    </OL>
                    <LI jslog=TreeItem; parent: parentTreeItem; track: click, keydown: ArrowUp|ArrowDown|ArrowLeft|ArrowRight|Backspace|Delete|Enter|Space|Home|End role=treeitem class=security-sidebar-tree-item title=http://bar.test >
                        <DIV class=selection fill >
                        </DIV>
                        <DIV class=leading-icons icons-container >
                            <DEVTOOLS-ICON role=presentation name=warning class=security-property security-property-insecure >
                                <#document-fragment >
                                    <SPAN style=--icon-url: var(--image-file-warning); >
                                    </SPAN>
                                    <STYLE >
                                    </STYLE>
                                </#document-fragment>
                            </DEVTOOLS-ICON>
                        </DIV>
                        <SPAN class=tree-element-title >
                        </SPAN>
                        <SPAN class=highlighted-url >
                            <SPAN class=url-scheme-insecure >
http
                            </SPAN>
                            <SPAN class=url-scheme-separator >
://
                            </SPAN>
                            <SPAN >
bar.test
                            </SPAN>
                        </SPAN>
                    </LI>
                    <OL class=children role=group >
                    </OL>
                </OL>
                <LI title=Secure origins jslog=TreeItem; parent: parentTreeItem; track: click, keydown: ArrowUp|ArrowDown|ArrowLeft|ArrowRight|Backspace|Delete|Enter|Space|Home|End role=treeitem class=parent always-parent expanded security-sidebar-origins hidden aria-expanded=true >
                    <DIV class=selection fill >
                    </DIV>
                    <SPAN class=tree-element-title >
Secure origins
                    </SPAN>
                </LI>
                <OL class=children expanded hidden role=group aria-label=Secure origins >
                </OL>
                <LI title=Unknown / canceled jslog=TreeItem; parent: parentTreeItem; track: click, keydown: ArrowUp|ArrowDown|ArrowLeft|ArrowRight|Backspace|Delete|Enter|Space|Home|End role=treeitem class=parent always-parent expanded security-sidebar-origins hidden aria-expanded=true >
                    <DIV class=selection fill >
                    </DIV>
                    <SPAN class=tree-element-title >
Unknown / canceled
                    </SPAN>
                </LI>
                <OL class=children expanded hidden role=group aria-label=Unknown / canceled >
                </OL>
            </OL>
        </DIV>
    </#document-fragment>
</DIV>

